--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^13.13.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "eslint": "^6.8.0",
