--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "es6",
       "lib": [
         "dom",
         "dom.iterable",
@@ -16,12 +16,12 @@
         "@/*": ["*"]
       },
       "allowJs": true,
-      "skipLibCheck": true,
-      "allowSyntheticDefaultImports": true,
+      // "skipLibCheck": true,
+      // "allowSyntheticDefaultImports": true,
       // "strict": true,
-      "forceConsistentCasingInFileNames": true,
+      // "forceConsistentCasingInFileNames": true,
+      // "noEmit": true
       "resolveJsonModule": true,
-      "noEmit": true
     },
     "include": [
       "src"
