--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.5.4",
+    "jest-localstorage-mock": "^2.4.2",
     "lint-staged": "^10.2.2",
     "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
