--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack serve --open",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
@@ -17,44 +17,44 @@
   "devDependencies": {
     "@testing-library/react": "^11.0.4",
     "@types/axios": "^0.14.0",
-    "@types/faker": "^4.1.11",
-    "@types/jest": "^25.2.1",
+    "@types/faker": "^5.5.3",
+    "@types/jest": "^26.0.22",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^13.13.5",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.5.3",
-    "eslint": "^6.8.0",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.25.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "faker": "^4.1.0",
-    "git-commit-msg-linter": "^2.4.2",
-    "husky": "^4.2.5",
+    "eslint-plugin-standard": "^5.0.0",
+    "faker": "^5.5.3",
+    "git-commit-msg-linter": "^3.1.0",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.5.4",
+    "jest": "^26.6.3",
     "jest-localstorage-mock": "^2.4.2",
     "lint-staged": "^10.2.2",
     "sass": "^1.32.8",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
-    "ts-jest": "^25.5.0",
-    "ts-loader": "^7.0.4",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
   }
 }
