config: migrate husky-4-to-6

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "manguinho",
   "version": "1.0.1",
-  "description": "",
+  "description": "clean architecture, tdd, react",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open",
@@ -9,7 +9,8 @@
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "check": "npm-check -u -s"
+    "check": "npm-check -u -s",
+    "pre-commit": "lint-staged"
   },
   "keywords": [],
   "author": "",
