--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "check": "npm-check -u -s",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "lint": "npx eslint src/**"
   },
   "keywords": [],
   "author": "",
