--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && npm run < coverage/lcov.info",
     "check": "npm-check -u -s",
     "pre-commit": "lint-staged",
     "lint": "npx eslint src/**"
@@ -28,6 +29,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "clean-webpack-plugin": "^3.0.0",
+    "coveralls": "^3.1.0",
     "css-loader": "^5.2.4",
     "eslint": "^7.25.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
