--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manguinho",
+  "name": "my-clean-react",
   "version": "1.3.0",
   "description": "clean architecture, tdd, react",
   "main": "index.js",
@@ -12,7 +12,9 @@
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "check": "npm-check -u -s",
     "pre-commit": "lint-staged",
-    "lint": "npx eslint src/**"
+    "lint": "npx eslint src/**",
+    "build": "webpack --config webpack.config.js",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
