--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   ],
   "plugins": ["react"],
   "parserOptions": {
+    "parser": "@typescript-eslint/parser",
     "project": "./tsconfig.json"
   },
   "rules": {
