--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pre-commit": "lint-staged",
     "lint": "npx eslint src/**",
     "build": "webpack --config webpack.config.js",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test:cypress": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -33,8 +34,10 @@
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "css-loader": "^5.2.4",
+    "cypress": "^7.4.0",
     "eslint": "^7.25.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
@@ -52,7 +55,7 @@
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
     "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.2",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.0"
